<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/layout_margin"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding"
    android:paddingTop="@dimen/small_padding"
    android:paddingEnd="@dimen/padding">

    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center" />

    <EditText
        style="@style/NameStyle"
        android:id="@+id/nickname_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/what_is_your_nickname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:text="" />

    <Button
        android:id="@+id/done_button"
        android:text="@string/done"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bio_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bio_text" />

    </ScrollView>

</LinearLayout>


    <!-- See C:\...\Documents\Android\Resources\Learning\Images\scrollview for a reference of how this
    linear layout can be used within a scrollview to contain other views -->